// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FollowerItem - Snapshots > matches snapshot when following 1`] = `
<div
  class="gap-3 rounded-md bg-card p-6 lg:bg-transparent lg:p-0"
  data-testid="container"
>
  <div
    class="flex flex-wrap items-center justify-between gap-6 lg:flex-nowrap"
    data-testid="container"
  >
    <a
      class="flex min-w-0 flex-1 items-center gap-2"
      data-testid="link"
      href="/profile/test-user-1"
    >
      <div
        data-avatar="https://example.com/avatar.png"
        data-name="John Doe"
        data-size="md"
        data-testid="avatar-with-fallback"
      >
        <img
          alt="John Doe"
          src="https://example.com/avatar.png"
        />
      </div>
      <div
        data-testid="container"
      >
        <p
          class="truncate font-bold"
          data-testid="typography"
        >
          John Doe
        </p>
        <p
          class="truncate text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase"
          data-testid="typography"
        >
          test...er-1
        </p>
      </div>
    </a>
    <div
      class="hidden flex-wrap items-center gap-2 lg:flex"
      data-testid="container"
    >
      <span
        data-testid="tag"
      >
        bitcoin
      </span>
      <span
        data-testid="tag"
      >
        candid
      </span>
    </div>
    <div
      class="flex shrink-0 items-center gap-3"
      data-testid="container"
    >
      <div
        class="items-start"
        data-testid="container"
      >
        <p
          class="text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase"
          data-testid="typography"
        >
          TAGS
        </p>
        <p
          class="font-bold"
          data-testid="typography"
        >
          100
        </p>
      </div>
      <div
        class="items-start"
        data-testid="container"
      >
        <p
          class="text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase"
          data-testid="typography"
        >
          POSTS
        </p>
        <p
          class="font-bold"
          data-testid="typography"
        >
          50
        </p>
      </div>
    </div>
    <button
      aria-label="Unfollow"
      class="group hidden w-[110px] justify-center lg:flex"
      data-testid="button"
    >
      <div
        class="flex items-center gap-1.5 group-hover:hidden"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-check size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 6 9 17l-5-5"
          />
        </svg>
        <span>
          Following
        </span>
      </div>
      <div
        class="hidden items-center gap-1.5 group-hover:flex"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user-minus size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
          <line
            x1="22"
            x2="16"
            y1="11"
            y2="11"
          />
        </svg>
        <span>
          Unfollow
        </span>
      </div>
    </button>
  </div>
  <div
    class="flex flex-wrap items-center justify-between gap-3 lg:hidden"
    data-testid="container"
  >
    <div
      class="flex flex-1 flex-wrap items-center gap-2"
      data-testid="container"
    >
      <span
        data-testid="tag"
      >
        bitcoin
      </span>
      <span
        data-testid="tag"
      >
        candid
      </span>
    </div>
    <button
      aria-label="Unfollow"
      class="group w-[110px] justify-center"
      data-testid="button"
    >
      <div
        class="flex items-center gap-1.5 group-hover:hidden"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-check size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 6 9 17l-5-5"
          />
        </svg>
        <span>
          Following
        </span>
      </div>
      <div
        class="hidden items-center gap-1.5 group-hover:flex"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user-minus size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
          <line
            x1="22"
            x2="16"
            y1="11"
            y2="11"
          />
        </svg>
        <span>
          Unfollow
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`FollowerItem - Snapshots > matches snapshot when not following 1`] = `
<div
  class="gap-3 rounded-md bg-card p-6 lg:bg-transparent lg:p-0"
  data-testid="container"
>
  <div
    class="flex flex-wrap items-center justify-between gap-6 lg:flex-nowrap"
    data-testid="container"
  >
    <a
      class="flex min-w-0 flex-1 items-center gap-2"
      data-testid="link"
      href="/profile/test-user-1"
    >
      <div
        data-avatar="https://example.com/avatar.png"
        data-name="John Doe"
        data-size="md"
        data-testid="avatar-with-fallback"
      >
        <img
          alt="John Doe"
          src="https://example.com/avatar.png"
        />
      </div>
      <div
        data-testid="container"
      >
        <p
          class="truncate font-bold"
          data-testid="typography"
        >
          John Doe
        </p>
        <p
          class="truncate text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase"
          data-testid="typography"
        >
          test...er-1
        </p>
      </div>
    </a>
    <div
      class="hidden flex-wrap items-center gap-2 lg:flex"
      data-testid="container"
    >
      <span
        data-testid="tag"
      >
        bitcoin
      </span>
      <span
        data-testid="tag"
      >
        candid
      </span>
    </div>
    <div
      class="flex shrink-0 items-center gap-3"
      data-testid="container"
    >
      <div
        class="items-start"
        data-testid="container"
      >
        <p
          class="text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase"
          data-testid="typography"
        >
          TAGS
        </p>
        <p
          class="font-bold"
          data-testid="typography"
        >
          100
        </p>
      </div>
      <div
        class="items-start"
        data-testid="container"
      >
        <p
          class="text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase"
          data-testid="typography"
        >
          POSTS
        </p>
        <p
          class="font-bold"
          data-testid="typography"
        >
          50
        </p>
      </div>
    </div>
    <button
      aria-label="Follow"
      class="group hidden w-[110px] justify-center lg:flex"
      data-testid="button"
    >
      <div
        class="flex items-center gap-1.5 group-hover:hidden"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user-round-plus size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 21a8 8 0 0 1 13.292-6"
          />
          <circle
            cx="10"
            cy="8"
            r="5"
          />
          <path
            d="M19 16v6"
          />
          <path
            d="M22 19h-6"
          />
        </svg>
        <span>
          Follow
        </span>
      </div>
      <div
        class="hidden items-center gap-1.5 group-hover:flex"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-check size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 6 9 17l-5-5"
          />
        </svg>
        <span>
          Follow
        </span>
      </div>
    </button>
  </div>
  <div
    class="flex flex-wrap items-center justify-between gap-3 lg:hidden"
    data-testid="container"
  >
    <div
      class="flex flex-1 flex-wrap items-center gap-2"
      data-testid="container"
    >
      <span
        data-testid="tag"
      >
        bitcoin
      </span>
      <span
        data-testid="tag"
      >
        candid
      </span>
    </div>
    <button
      aria-label="Follow"
      class="group w-[110px] justify-center"
      data-testid="button"
    >
      <div
        class="flex items-center gap-1.5 group-hover:hidden"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user-round-plus size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 21a8 8 0 0 1 13.292-6"
          />
          <circle
            cx="10"
            cy="8"
            r="5"
          />
          <path
            d="M19 16v6"
          />
          <path
            d="M22 19h-6"
          />
        </svg>
        <span>
          Follow
        </span>
      </div>
      <div
        class="hidden items-center gap-1.5 group-hover:flex"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-check size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 6 9 17l-5-5"
          />
        </svg>
        <span>
          Follow
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`FollowerItem - Snapshots > matches snapshot without tags 1`] = `
<div
  class="gap-3 rounded-md bg-card p-6 lg:bg-transparent lg:p-0"
  data-testid="container"
>
  <div
    class="flex flex-wrap items-center justify-between gap-6 lg:flex-nowrap"
    data-testid="container"
  >
    <a
      class="flex min-w-0 flex-1 items-center gap-2"
      data-testid="link"
      href="/profile/test-user-1"
    >
      <div
        data-avatar="https://example.com/avatar.png"
        data-name="John Doe"
        data-size="md"
        data-testid="avatar-with-fallback"
      >
        <img
          alt="John Doe"
          src="https://example.com/avatar.png"
        />
      </div>
      <div
        data-testid="container"
      >
        <p
          class="truncate font-bold"
          data-testid="typography"
        >
          John Doe
        </p>
        <p
          class="truncate text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase"
          data-testid="typography"
        >
          test...er-1
        </p>
      </div>
    </a>
    <div
      class="flex shrink-0 items-center gap-3"
      data-testid="container"
    >
      <div
        class="items-start"
        data-testid="container"
      >
        <p
          class="text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase"
          data-testid="typography"
        >
          TAGS
        </p>
        <p
          class="font-bold"
          data-testid="typography"
        >
          100
        </p>
      </div>
      <div
        class="items-start"
        data-testid="container"
      >
        <p
          class="text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase"
          data-testid="typography"
        >
          POSTS
        </p>
        <p
          class="font-bold"
          data-testid="typography"
        >
          50
        </p>
      </div>
    </div>
    <button
      aria-label="Follow"
      class="group hidden w-[110px] justify-center lg:flex"
      data-testid="button"
    >
      <div
        class="flex items-center gap-1.5 group-hover:hidden"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user-round-plus size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 21a8 8 0 0 1 13.292-6"
          />
          <circle
            cx="10"
            cy="8"
            r="5"
          />
          <path
            d="M19 16v6"
          />
          <path
            d="M22 19h-6"
          />
        </svg>
        <span>
          Follow
        </span>
      </div>
      <div
        class="hidden items-center gap-1.5 group-hover:flex"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-check size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 6 9 17l-5-5"
          />
        </svg>
        <span>
          Follow
        </span>
      </div>
    </button>
  </div>
  <div
    class="flex flex-wrap items-center justify-between gap-3 lg:hidden"
    data-testid="container"
  >
    <button
      aria-label="Follow"
      class="group w-[110px] justify-center"
      data-testid="button"
    >
      <div
        class="flex items-center gap-1.5 group-hover:hidden"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user-round-plus size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 21a8 8 0 0 1 13.292-6"
          />
          <circle
            cx="10"
            cy="8"
            r="5"
          />
          <path
            d="M19 16v6"
          />
          <path
            d="M22 19h-6"
          />
        </svg>
        <span>
          Follow
        </span>
      </div>
      <div
        class="hidden items-center gap-1.5 group-hover:flex"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-check size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 6 9 17l-5-5"
          />
        </svg>
        <span>
          Follow
        </span>
      </div>
    </button>
  </div>
</div>
`;
